--- a/Forever/Forever.csproj
+++ b/Forever/Forever.csproj
@@ -76,6 +76,12 @@
     <Compile Include="Forms\OrderEditForm.Designer.cs">
       <DependentUpon>OrderEditForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\OrdersListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OrdersListForm.Designer.cs">
+      <DependentUpon>OrdersListForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\MainForm.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OrderEditForm.resx">
       <DependentUpon>OrderEditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OrdersListForm.resx">
+      <DependentUpon>OrdersListForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -128,6 +137,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon_forever_64.ico" />
+    <None Include="Resources\icon_new_128.png" />
+    <None Include="Resources\icon_new_32.png" />
+    <None Include="Resources\icon_new_24.png" />
+    <None Include="Resources\icon_new_16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
