--- a/Forever/Forever.csproj
+++ b/Forever/Forever.csproj
@@ -137,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon_forever_64.ico" />
+    <None Include="Resources\icon_forever_24.ico" />
     <None Include="Resources\icon_new_128.png" />
     <None Include="Resources\icon_new_32.png" />
     <None Include="Resources\icon_new_24.png" />
