--- a/Forever/Forever.csproj
+++ b/Forever/Forever.csproj
@@ -78,6 +78,12 @@
     <Compile Include="Forms\OrderEditForm.Designer.cs">
       <DependentUpon>OrderEditForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\OrderToPdf.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\OrderToPdf.Designer.cs">
+      <DependentUpon>OrderToPdf.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\MainForm.resx">
@@ -85,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OrderEditForm.resx">
       <DependentUpon>OrderEditForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\OrderToPdf.resx">
+      <DependentUpon>OrderToPdf.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
