--- a/Forever/Forever.csproj
+++ b/Forever/Forever.csproj
@@ -84,6 +84,12 @@
     <Compile Include="Forms\OrderToPdf.Designer.cs">
       <DependentUpon>OrderToPdf.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ReturnEditForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ReturnEditForm.Designer.cs">
+      <DependentUpon>ReturnEditForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\OrderToPdf.resx">
       <DependentUpon>OrderToPdf.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ReturnEditForm.resx">
+      <DependentUpon>ReturnEditForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
